fix: modernize Android APIs and remove deprecations