@@ -10,11 +10,11 @@ import java.io.IOException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.List;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 
 import com.grack.nanojson.JsonArray;
 import com.grack.nanojson.JsonParser;
 import com.grack.nanojson.JsonParserException;
+import java.nio.charset.StandardCharsets;
 
 public class NiconicoSuggestionExtractor extends SuggestionExtractor {
     public NiconicoSuggestionExtractor(final StreamingService service) {
@@ -25,7 +25,7 @@ public class NiconicoSuggestionExtractor extends SuggestionExtractor {
     public List<String> suggestionList(final String query)
             throws IOException, ExtractionException {
         final List<String> suggestions = new ArrayList<>();
-        final String encoded = URLEncoder.encode(query, UTF_8);
+        final String encoded = URLEncoder.encode(query, StandardCharsets.UTF_8.name());
         final String response = NewPipe.getDownloader()
                 .get(NiconicoService.SUGGESTION_URL + encoded).responseBody();
         try {
