@@ -46,9 +46,9 @@ import java.util.stream.Collectors;
 import static org.schabi.newpipe.extractor.Image.ResolutionLevel.LOW;
 import static org.schabi.newpipe.extractor.Image.ResolutionLevel.MEDIUM;
 import static org.schabi.newpipe.extractor.ServiceList.SoundCloud;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
 import static org.schabi.newpipe.extractor.utils.Utils.isNullOrEmpty;
 import static org.schabi.newpipe.extractor.utils.Utils.replaceHttpWithHttps;
+import java.nio.charset.StandardCharsets;
 
 public final class SoundcloudParsingHelper {
     private static String clientId;
@@ -117,7 +117,7 @@ public final class SoundcloudParsingHelper {
     public static JsonObject resolveFor(@Nonnull final Downloader downloader, final String url)
             throws IOException, ExtractionException {
         final String apiUrl = SOUNDCLOUD_API_V2_URL + "resolve"
-                + "?url=" + URLEncoder.encode(url, UTF_8)
+                + "?url=" + URLEncoder.encode(url, StandardCharsets.UTF_8.name())
                 + "&client_id=" + clientId();
 
         try {
@@ -139,7 +139,7 @@ public final class SoundcloudParsingHelper {
             ReCaptchaException {
 
         final String response = NewPipe.getDownloader().get("https://w.soundcloud.com/player/?url="
-                + URLEncoder.encode(apiUrl, UTF_8), SoundCloud.getLocalization()).responseBody();
+                + URLEncoder.encode(apiUrl, StandardCharsets.UTF_8.name()), SoundCloud.getLocalization()).responseBody();
 
         return Jsoup.parse(response).select("link[rel=\"canonical\"]").first()
                 .attr("abs:href");
@@ -170,7 +170,7 @@ public final class SoundcloudParsingHelper {
 
         try {
             final String widgetUrl = "https://api-widget.soundcloud.com/resolve?url="
-                    + URLEncoder.encode(url.toString(), UTF_8)
+                    + URLEncoder.encode(url.toString(), StandardCharsets.UTF_8.name())
                     + "&format=json&client_id=" + SoundcloudParsingHelper.clientId();
             final String response = NewPipe.getDownloader().get(widgetUrl,
                     SoundCloud.getLocalization()).responseBody();
