@@ -18,7 +18,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 import static org.schabi.newpipe.extractor.services.soundcloud.SoundcloudParsingHelper.SOUNDCLOUD_API_V2_URL;
-import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
+import java.nio.charset.StandardCharsets;
 
 public class SoundcloudSuggestionExtractor extends SuggestionExtractor {
 
@@ -32,7 +32,7 @@ public class SoundcloudSuggestionExtractor extends SuggestionExtractor {
         final List<String> suggestions = new ArrayList<>();
         final Downloader dl = NewPipe.getDownloader();
         final String url = SOUNDCLOUD_API_V2_URL + "search/queries" + "?q="
-                + URLEncoder.encode(query, UTF_8) + "&client_id="
+                + URLEncoder.encode(query, StandardCharsets.UTF_8.name()) + "&client_id="
                 + SoundcloudParsingHelper.clientId() + "&limit=10";
         final String response = dl.get(url, getExtractorLocalization()).responseBody();
 
